--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <!-- Website - www.codingnepalweb.com -->
 <html lang="en" dir="ltr">
+  
   <head>
     <meta charset="UTF-8" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="ppf.css" />
-    <script src="ppf.js"></script>
-"
+    <link rel="stylesheet" href="port.css" />
+    <script src="ppf.js" defer></script>
+
+
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,20 +20,27 @@
       <a href="#home"><i class="fas fa-arrow-up"></i></a>
     </div>
     <!-- navgaition menu -->
-    <nav>
-      <div class="navbar">
-        <div class="logo"><a href="#">Portfolio.</a></div>
-        <ul class="menu">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <div class="cancel-btn">
-            <i class="fas fa-times"></i>
-          </div>
-        </ul>
+     <nav>
+    <div class="navbar">
+  <div class="logo"><a href="#">Portfolio.</a></div>
+
+  <ul class="menu">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#skills">Skills</a></li>
+    <li><a href="#services">Services</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+
+  <div class="cancel-btn">
+    <i class="fas fa-times"></i>
+  </div>
+
+  
+
+
        <div class="media-icons">
+        <!-- social icons -->
   <a href="https://www.instagram.com/sajad_says/" target="_blank">
     <i class="fab fa-instagram"></i>
   </a>
@@ -240,7 +249,8 @@
           <span>Created By <a href="#">Sajad Ahmed</a> |  2025 All Rights Reserved</span>
         </div>
       </footer>
-      <script src="ppf.js"></script>
+     
       </body>
       </html>
+
       
