--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="title"><span>About Me</span></div>
         <div class="about-details">
           <div class="left">
-            <img src="./imagessajad.jpg" alt="Sajad Ahmed" />
+            <img src="img.jpg" alt="Sajad Ahmed" />
           </div>
           <div class="right">
             <div class="topic">Designing Is My Passion</div>
